# qir_dtcase

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.prodcontainer/: docker-compose.yml
.testcontainer/: docker-compose.yml
000000/: main.py
Clients/Incorpel/: recreate_tables.py  test_connection.py  update_groups.py
Clients/Incorpel/Archive/2023-01-01/: recreate_tables.py  update_groups.py
Clients/Incorpel/Archive/2023-01-07/: recreate_tables.py
