[tool.poetry]
name = "dtcase"
version = "0.1.0"
description = "Each Case is a Data Transformation."
authors = ["Éverton M. Vieira <emuvi@outlook.com.br>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
